labs/03-private-network-deployment/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels:
    name: argo
    lab: "03-private-network"
